spacing issues

--- a/css/app.styl
+++ b/css/app.styl
@@ -47,6 +47,10 @@ body, html
 	font-family: 'Otiz'
 	-webkit-font-smoothing: antialiased
 
+	a
+		text-decoration: none
+		color: inherit
+
 webfont('Otiz', 'otiz', true, 'normal')
 
 .flashDiv
@@ -155,10 +159,14 @@ webfont('Otiz', 'otiz', true, 'normal')
 section
 	margin-bottom: $spacing * 2
 
+.d6
+	margin-top: -200px
+
 .release-date
 	color: $orang
 .tracklist
 	color: $secondaryColor
+	margin-top: -100px
 	letter-spacing: 0.01em
 	li
 		list-style: none
